// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backend.Resource.Form.Variants component renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={undefined}
      >
        Variant
      </label>
      <react-dropzone
        className="form-dropzone style-square"
        id={undefined}
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            aria-hidden="true"
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
                role="button"
              >
                Upload a file
              </span>
               or 
              <br />
              drag and drop here
              <br />
            </p>
          </div>
        </div>
      </react-dropzone>
    </div>
  </div>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={undefined}
      >
        Variant
      </label>
      <react-dropzone
        className="form-dropzone style-square"
        id={undefined}
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            aria-hidden="true"
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
                role="button"
              >
                Upload a file
              </span>
               or 
              <br />
              drag and drop here
              <br />
            </p>
          </div>
        </div>
      </react-dropzone>
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.Variants component when kind is image renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={undefined}
      >
        High Resolution Image
      </label>
      <react-dropzone
        accept="image/*"
        className="form-dropzone style-square"
        id={undefined}
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            aria-hidden="true"
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
                role="button"
              >
                Upload a file
              </span>
               or 
              <br />
              drag and drop here
              <br />
            </p>
            <p
              className="secondary"
            >
              gif, jpeg, jpg, png, svg
            </p>
          </div>
        </div>
      </react-dropzone>
    </div>
  </div>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={undefined}
      >
        Thumbnail Image
      </label>
      <react-dropzone
        accept="image/*"
        className="form-dropzone style-square"
        id={undefined}
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            aria-hidden="true"
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
                role="button"
              >
                Upload a file
              </span>
               or 
              <br />
              drag and drop here
              <br />
            </p>
            <p
              className="secondary"
            >
              gif, jpeg, jpg, png, svg
            </p>
          </div>
        </div>
      </react-dropzone>
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.Variants component when kind is pdf renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
        htmlFor={undefined}
      >
        Thumbnail Image
      </label>
      <react-dropzone
        accept="image/*"
        className="form-dropzone style-square"
        id={undefined}
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            aria-hidden="true"
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
                role="button"
              >
                Upload a file
              </span>
               or 
              <br />
              drag and drop here
              <br />
            </p>
            <p
              className="secondary"
            >
              gif, jpeg, jpg, png, svg
            </p>
          </div>
        </div>
      </react-dropzone>
    </div>
  </div>
</div>
`;
